--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -48,5 +48,9 @@
         "xtr1common": "cpp",
         "xutility": "cpp",
         "list": "cpp"
-    }
+    },
+    "java.project.sourcePaths": [
+        "csci1913/labs/lab6",
+        "csci1913/labs/lab7"
+    ]
 }
