--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -50,7 +50,8 @@
         "list": "cpp"
     },
     "java.project.sourcePaths": [
+        "csci1913/labs/lab7",
         "csci1913/labs/lab6",
-        "csci1913/labs/lab7"
+        "csci1913/labs/lab8"
     ]
 }
