--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -53,6 +53,7 @@
         "csci1913/labs/lab8",
         "csci1913/labs/lab7",
         "csci1913/labs/lab6",
-        "csci1913/Homework/Project2"
+        "csci1913/Homework/Project2",
+        "csci1913/labs/lab9"
     ]
 }
