--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -6,6 +6,13 @@
     "configurations": [
         {
             "type": "java",
+            "name": "Launch Tournament",
+            "request": "launch",
+            "mainClass": "Tournament",
+            "projectName": "repo-swear041_a631936a"
+        },
+        {
+            "type": "java",
             "name": "Launch AITest",
             "request": "launch",
             "mainClass": "AITest",
