--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -55,6 +55,7 @@
         "csci1913/labs/lab7",
         "csci1913/labs/lab6",
         "csci1913/Homework/Project2",
-        "csci1913/labs/lab10"
+        "csci1913/labs/lab10",
+        "csci1913\\labs\\lab11"
     ]
 }
