--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -56,6 +56,7 @@
         "csci1913/labs/lab6",
         "csci1913/Homework/Project2",
         "csci1913/labs/lab10",
-        "csci1913\\labs\\lab11"
+        "csci1913\\labs\\lab11",
+        "csci1913\\Homework\\Project3"
     ]
 }
