added project 3 so it runs

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -58,6 +58,7 @@
         "csci1913/labs/lab10",
         "csci1913\\labs\\lab11",
         "csci1913\\labs",
-        "csci1913\\warmups"
+        "csci1913\\warmups",
+        "csci1913\\Homework\\Project3"
     ]
 }
