--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -48,7 +48,8 @@
         "xtr1common": "cpp",
         "xutility": "cpp",
         "list": "cpp",
-        "vector": "cpp"
+        "vector": "cpp",
+        "stdio.h": "c"
     },
     "java.project.sourcePaths": [
         "csci1913/labs/lab9",
