--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -65,5 +65,6 @@
         "csci1913\\labs",
         "csci1913\\warmups",
         "csci1913\\Homework\\Project3"
-    ]
+    ],
+    "github-enterprise.uri": "https://github.umn.edu/swear041/projects.git"
 }
