worked on project

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -68,5 +68,6 @@
         "csci1913\\warmups",
         "csci1913\\Homework\\Project3"
     ],
-    "github-enterprise.uri": "https://github.umn.edu/swear041/projects.git"
+    "github-enterprise.uri": "https://github.umn.edu/swear041/projects.git",
+    "C_Cpp.errorSquiggles": "disabled"
 }
