coding stuff idk

--- a/csci3081W/Workshops/public-workshop-5-main/Dockerfile
+++ b/csci3081W/Workshops/public-workshop-5-main/Dockerfile
@@ -9,11 +9,17 @@ RUN apt-get update && apt-get install -y \
   zlib1g-dev
 
 # 1 - make directory to run container
+RUN mkdir /app
 
 # 2 - copy project into newly created directory
+COPY . /app
 
 # 3 - CD into new directory for running container
+WORKDIR /app
 
 # 4 - compile code
+# executor failed running [/bin/sh -c make -j]: exit code: 2 ???
+RUN make -j
 
-# 5 - run command in docker container once image ran
+# 5 - run command in docker once image ran
+CMD [ "./build/bin/transit_service", "8081", "apps/transit_service/web/" ]
